fix: move logic into AddPluginVisitor
- update tests
- move logic into AddPluginVisitor